--- a/src/setting/message/messageStyle.scss
+++ b/src/setting/message/messageStyle.scss
@@ -8,6 +8,50 @@
 }
 
 
+.message-icon-box{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 27px;
+    width: 100%;
+
+    .header-icon-item{
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+    .ant-badge{
+        color: inherit
+    }
+}
+
+.message-icon-theme-default{
+    cursor: pointer;
+    &:hover{
+        background: var(--pi-hover-color);
+    }
+}
+.message-icon-theme-black{
+    cursor: pointer;
+    color: white;
+
+    &:hover{
+        background-color: #eef5ff42;
+    }
+}
+.message-icon-theme-blue{
+    cursor: pointer;
+    color: white;
+    &:hover{
+        background-color: #abc2e866;
+    }
+}
+
+
+.message-icon-box-not-isExpanded{
+    justify-content: center;
+}
+
 .message-item{
     display: flex;
     align-items: center;
