--- a/src/test/common/styles/testcaseStyle.scss
+++ b/src/test/common/styles/testcaseStyle.scss
@@ -328,6 +328,14 @@
         }
     }
 
+    .case-step-header-title{
+        background: var(--pi-bg-color);
+        font-weight: 600;
+        color: var(--pi-font-color-grey);
+        font-size: 13px;
+    }
+
+
 
 
     .step-item-content-header{
