--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -31,12 +31,17 @@
     // 字重
     --thoughtware-font-weight-bold: bold; // 标题字重
 
-
     //----项目内定义----
     --pi-base-color:var(--thoughtware-blue);  //着重色
     --pi-bg-grey-100:#f8f8f8;
     --pi-bg-grey-200:#ededed;
     --pi-bg-color:var(--thoughtware-white);
+
+    //主题
+    --thoughtware-theme-default: var(--pi-bg-grey-100);
+    --thoughtware-theme-black: #131d30;
+    --thoughtware-theme-blue: var(--thoughtware-blue);
+
 
     --pi-hover-color:var(--thoughtware-gray-200); //hover颜色
     --pi-action-color:var(--thoughtware-gray-200); //选中
