--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -40,7 +40,7 @@
     //主题
     --thoughtware-theme-default: var(--pi-bg-grey-100);
     --thoughtware-theme-black: #131d30;
-    --thoughtware-theme-blue: var(--thoughtware-blue);
+    --thoughtware-theme-blue: #2f5eb1;
 
 
     --pi-hover-color:var(--thoughtware-gray-200); //hover颜色
