--- a/src/setting/message/messageStyle.scss
+++ b/src/setting/message/messageStyle.scss
@@ -9,19 +9,10 @@
 
 
 .message-icon-box{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px 29px;
-    width: 100%;
-
-    .header-icon-item{
-        font-size: 18px;
-        cursor: pointer;
-    }
 
     .ant-badge{
-        color: inherit
+        color: inherit;
+        font-size: 18px;
     }
 }
 
