--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -23,7 +23,7 @@ body,p,h1,h2,h3,h4,h5,h6,ul,ol,dl,li,dt,dd{
 
 /*控制整个滚动条*/
 ::-webkit-scrollbar {
-    background-color: white;
+    //background-color: white;
     width: 10px;
     height: 10px;
 }
