--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -38,13 +38,13 @@
     --pi-bg-color:var(--thoughtware-white);
 
     //主题
-    --thoughtware-theme-default: var(--pi-bg-grey-100);
+    --thoughtware-theme-default:  #e7e7e7ab;
     --thoughtware-theme-black: #131d30;
     --thoughtware-theme-blue: #2f5eb1;
 
 
-    --pi-hover-color:var(--thoughtware-gray-200); //hover颜色
-    --pi-action-color:var(--thoughtware-gray-200); //选中
+    --pi-hover-color:#edeff6; //hover颜色
+    --pi-action-color:#edeff6; //选中
 
     --pi-font-color-grey: #888;
 
