--- a/src/common/LeftMenuCommon/LeftMenuCommonStyle.scss
+++ b/src/common/LeftMenuCommon/LeftMenuCommonStyle.scss
@@ -144,6 +144,12 @@
     gap: 10px;
     padding: 10px 21px;
     width: 100%;
+
+    .thoughtware-profile{
+        .ant-avatar{
+            background: #40a9ff;
+        }
+    }
 }
 
 .menu-box-bottom-item-theme-default{
