--- a/src/support/environment/components/envStyle.scss
+++ b/src/support/environment/components/envStyle.scss
@@ -27,6 +27,10 @@
         margin: 10px 0;
     }
 
+    .ant-tabs-top > .ant-tabs-nav, .ant-tabs-bottom > .ant-tabs-nav, .ant-tabs-top > div > .ant-tabs-nav, .ant-tabs-bottom > div > .ant-tabs-nav{
+        margin: 0;
+    }
+
     .ant-tabs-bottom>.ant-tabs-nav:before, .ant-tabs-bottom>div>.ant-tabs-nav:before, .ant-tabs-top>.ant-tabs-nav:before, .ant-tabs-top>div>.ant-tabs-nav:before{
         border-bottom: 0 solid #f0f0f0;
     }
