--- a/src/common/menuSelect/menuSelectSytle.scss
+++ b/src/common/menuSelect/menuSelectSytle.scss
@@ -10,7 +10,7 @@
         text-align: center;
         cursor: pointer;
         border-bottom: 2px solid #ffffff00;
-
+        white-space: nowrap;
     }
 
     .select-menu-item:hover{
