--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -61,6 +61,7 @@
     margin: 0 auto;
     border-radius: var(--pi-border-radius);
     max-width: 1440px;
+    min-width: 670px;
     padding: 10px 20px;
 
 
