--- a/src/common/LeftMenuCommon/LeftMenuCommonStyle.scss
+++ b/src/common/LeftMenuCommon/LeftMenuCommonStyle.scss
@@ -36,17 +36,27 @@
 
         .menu-box-nav-item-theme-black{
             border-left: 3px solid #eef5ff00;
-            opacity: 0.7;
+
+            svg{
+                opacity: 0.7;
+            }
+
             &:hover{
                 background-color: #eef5ff42;
-                opacity: 1;
+
+                svg{
+                    opacity: 1;
+                }
             }
         }
 
         .select-link-theme-black{
             background-color: #eef5ff42;
             border-left: 3px solid #eef5ff;
-            opacity: 1;
+
+            svg{
+                opacity: 1;
+            }
         }
 
         .menu-box-nav-item-theme-blue{
