--- a/src/test/common/styles/testcaseStyle.scss
+++ b/src/test/common/styles/testcaseStyle.scss
@@ -305,12 +305,7 @@
 
 .case-table-case-type{
     width: 60px;
-    text-align: center;
-    background: var(--pi-bg-grey-100);
-    padding: 3px;
-    font-size: 12px;
-    border-radius: 5px;
-    border: 1px solid #e4e4e4;
+    font-size: 13px;
 }
 
 .step-item-box{
@@ -333,6 +328,7 @@
         font-weight: 600;
         color: var(--pi-font-color-grey);
         font-size: 13px;
+        white-space: nowrap;
     }
 
 
