--- a/src/setting/system/sysMana.scss
+++ b/src/setting/system/sysMana.scss
@@ -23,7 +23,7 @@
             cursor: pointer;
 
             &:hover{
-                background: var(--pi-hover-color);
+                background: #e3e8f0;
             }
         }
 
@@ -33,7 +33,7 @@
         height: 100%;
         width: 220px;
         border-right: 1px solid var(--pi-border-color);
-        background: var(--pi-greyf9-color);
+        background: #f0f3fa;
         overflow: auto;
 
         ul,li {
@@ -61,7 +61,7 @@
         }
 
         .orga-aside-item:hover{
-            background-color:var(--pi-hover-color);
+            background-color:#e3e8f0;
         }
 
         .aside-item-li{
@@ -71,16 +71,17 @@
         .orga-aside-li {
             height: 40px;
             line-height: 40px;
-            //border-left: 3px solid rgba(255, 255, 255, 0);
+            border-left: 3px solid rgba(255, 255, 255, 0);
 
         }
 
         .orga-aside-li:hover{
-            background-color:var(--pi-hover-color);
+            background-color: #e3e8f0;
+            border-left: 3px solid var(--pi-base-color);
         }
 
         .orga-aside-select {
-            background-color: var(--pi-action-color);
+            background-color: #e3e8f0;
             border-left: 3px solid var(--pi-base-color);
         }
     }
