--- a/src/support/environment/components/envStyle.scss
+++ b/src/support/environment/components/envStyle.scss
@@ -42,7 +42,7 @@
     height: 32px;
     border-radius: var(--pi-border-radius);
     border: var(--pi-input-border);
-    background-color: white;
+    background-color: #fafbfc;
     font-size: 12px!important;
 }
 
