--- a/src/globalConfig/globalstyles/global.scss
+++ b/src/globalConfig/globalstyles/global.scss
@@ -38,13 +38,13 @@
     --pi-bg-color:var(--thoughtware-white);
 
     //主题
-    --thoughtware-theme-default:  #e7e7e7ab;
+    --thoughtware-theme-default:  #f0f3fa;
     --thoughtware-theme-black: #131d30;
     --thoughtware-theme-blue: #2f5eb1;
 
 
-    --pi-hover-color:#edeff6; //hover颜色
-    --pi-action-color:#edeff6; //选中
+    --pi-hover-color:#f6f7f8; //hover颜色
+    --pi-action-color:#f6f7f8; //选中
 
     --pi-font-color-grey: #888;
 
