--- a/src/test/testcase/components/testcaseListView/testcaseListViewStyle.scss
+++ b/src/test/testcase/components/testcaseListView/testcaseListViewStyle.scss
@@ -13,7 +13,7 @@
     .case-list-left{
         width: 300px;
         border-right: 1px solid #e2e2e2;
-        background: #fafbfc;
+        background: #f6f7f8;
 
         .case-list-left-top{
             padding: 15px 10px 10px;
@@ -79,8 +79,9 @@
 
         .case-list-left-list-box{
             height: calc(100% - 138px);
-            padding: 0 0 10px 0;
+            padding:10px 0;
             overflow: auto;
+            background: white;
 
             .filter-box{
                 margin: 0 6px 0 10px;
@@ -89,7 +90,7 @@
                 gap: 5px;
 
                 .select-testcase-box{
-                    background: #e3e8f094;
+                    background: #f6f7f8;
                     border-radius: var(--pi-border-radius);
                     width: 135px;
                     //border: 1px solid #eaeaea;
