--- a/src/globalConfig/globalstyles/global.scss
+++ b/src/globalConfig/globalstyles/global.scss
@@ -43,8 +43,8 @@
     --thoughtware-theme-blue: #2f5eb1;
 
 
-    --pi-hover-color:#f6f7f8; //hover颜色
-    --pi-action-color:#f6f7f8; //选中
+    --pi-hover-color:#e3e8f0; //hover颜色
+    --pi-action-color:#e3e8f0; //选中
 
     --pi-font-color-grey: #888;
 
