--- a/src/statistics/common/statisticsStyle.scss
+++ b/src/statistics/common/statisticsStyle.scss
@@ -4,7 +4,7 @@
 
     .left-menu{
         width: 190px;
-        background: #f5f5f5;
+        background: #f1f3fa69;
 
         .menu-li {
             padding: 0 20px;
