--- a/src/globalConfig/globalstyles/base.scss
+++ b/src/globalConfig/globalstyles/base.scss
@@ -377,7 +377,8 @@ table .icon{
     height: 100%;
     position:relative;
     background: var(--pi-bg-grey-100);
-    box-shadow: 3px 0 5px -5px rgb(0 0 0 / 30%);
+    box-shadow: 2px 0 5px -5px rgb(0 0 0 / 30%);
+    border-right: 1px solid #e3e3e3;
 }
 
 .ws-detail-right{
@@ -395,6 +396,8 @@ table .icon{
 
 
 .ant-table {
+    border-bottom: 1px solid var(--pi-border-color);
+
     .ant-table-thead > tr > th{
         background:var(--pi-bg-color);
         font-weight: 600;
@@ -405,15 +408,6 @@ table .icon{
     .ant-table-thead > tr > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before{
         content: none;
     }
-
-    .ant-table-tbody > tr > td{
-        border-bottom: 0;
-    }
-}
-
-
-.ant-table{
-    border-bottom: 1px solid var(--pi-border-color);
 }
 
 .table-list-box{
@@ -421,8 +415,6 @@ table .icon{
     .ant-table-thead > tr > th, .ant-table-tbody > tr > td, .ant-table tfoot > tr > th, .ant-table tfoot > tr > td{
         padding: 8px;
     }
-
-
 
     .ant-table-tbody > tr > td{
         border-bottom: 0;
