--- a/src/setting/system/sysMana.scss
+++ b/src/setting/system/sysMana.scss
@@ -49,7 +49,7 @@
             padding: 0 15px 0 20px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            gap: 5px;
         }
 
         .orga-aside-item {
@@ -58,6 +58,7 @@
             align-items: center;
             height: 40px;
             line-height: 40px;
+            padding-left: 3px;
         }
 
         .orga-aside-item:hover{
@@ -71,7 +72,7 @@
         .orga-aside-li {
             height: 40px;
             line-height: 40px;
-            border-left: 3px solid rgba(255, 255, 255, 0);
+            border-left: 3px solid rgba(255, 255, 255, 0)
 
         }
 
@@ -130,6 +131,7 @@
     height: 30px;
     align-items: center;
     gap: 5px;
+    padding-left: 3px;
 }
 
 
