--- a/src/globalConfig/globalstyles/global.scss
+++ b/src/globalConfig/globalstyles/global.scss
@@ -67,6 +67,7 @@
 
     --pi-calc-content:calc(100% - 48px);
 
+    --backdrop-color:#fafbfc;
     --pi-greyf9-color: #f9f9f9; //悬浮颜色
     --pi-border-color:#f0f0f0; //边框颜色
     --pi-box-shadow: 0 3px 6px rgb(140 149 159 / 15%);  //阴影
