--- a/src/globalConfig/globalstyles/base.scss
+++ b/src/globalConfig/globalstyles/base.scss
@@ -359,11 +359,11 @@ table .icon{
     height: var(--pi-icon-x);
 }
 
-.teston-show{
+.testrubo-show{
     display: block;
 }
 
-.teston-hide{
+.testrubo-hide{
     display: none;
 }
 
