--- a/src/common/commonStyle.scss
+++ b/src/common/commonStyle.scss
@@ -106,9 +106,15 @@
 }
 
 
+.case-detail-center{
+    //margin: 0 auto;
+    //max-width: 80%;
+}
+
 .detail-box{
     padding: 5px;
     min-width: 670px;
+
 
     .detail-header{
         display: flex;
