--- a/src/globalConfig/globalstyles/base.scss
+++ b/src/globalConfig/globalstyles/base.scss
@@ -359,11 +359,11 @@ table .icon{
     height: var(--pi-icon-x);
 }
 
-.testrubo-show{
+.testhubo-show{
     display: block;
 }
 
-.testrubo-hide{
+.testhubo-hide{
     display: none;
 }
 
