--- a/src/support/environment/components/envStyle.scss
+++ b/src/support/environment/components/envStyle.scss
@@ -31,8 +31,8 @@
         margin: 0;
     }
 
-    .ant-tabs-bottom>.ant-tabs-nav:before, .ant-tabs-bottom>div>.ant-tabs-nav:before, .ant-tabs-top>.ant-tabs-nav:before, .ant-tabs-top>div>.ant-tabs-nav:before{
-        border-bottom: 0 solid #f0f0f0;
+    .ant-tabs-top > .ant-tabs-nav::before, .ant-tabs-bottom > .ant-tabs-nav::before, .ant-tabs-top > div > .ant-tabs-nav::before, .ant-tabs-bottom > div > .ant-tabs-nav::before{
+        border-bottom: 0;
     }
 }
 
